Fix range slider overlap problem.

--- a/resources/scss/public/filters/_rating.scss
+++ b/resources/scss/public/filters/_rating.scss
@@ -53,6 +53,7 @@
 
 	&__stars {
 		display: flex;
+		align-items: center;
 	}
 
 	&__label {
