--- a/resources/scss/public/filters/_slider.scss
+++ b/resources/scss/public/filters/_slider.scss
@@ -24,9 +24,10 @@
 
 	.ui-slider {
 		height: 4px;
-		width: 100%;
+		width: calc( 100% - 2px );
 		background: #E3E5E8;
 		margin-bottom: 24px;
+		margin-top: 16px;
 		position: relative;
 	}
 
